--- a/views/company/companyViewById.ejs
+++ b/views/company/companyViewById.ejs
@@ -1,16 +1,13 @@
-<%- include("../includes/header.ejs", {title:"Companies - " + result[0].company_name}); %>
-    <h1>Companies</h1>
-    <ul>
-        <li>Company Name: <%= result[0].company_name %></li>
-        <li>Address(es):
-            <ul>
-                <% for(var i=0; result.length > i; i++ ) { %>
-                    <li><%= result[i].street + ', ' + result[i].zipcode %></li>
-                <% } %>
-            </ul>
-        </li>
-    </ul>
+<html>
+<head>
+    <title>companies - <%= result[0].company_name %></title>
+</head>
+<body>
+<h1>Companies</h1>
+<ul>
+    <li>company ID: <%= result[0].company_id%></li>
+    <li>company Name: <%= result[0].company_name %></li>
+</ul>
+</body>
 
-<a href="/company/all"><< back</a>
-
-<%- include("../includes/footer.ejs"); %>
+</html>
