--- a/views/address/addressViewAll.ejs
+++ b/views/address/addressViewAll.ejs
@@ -1,19 +1,24 @@
 <html>
 <head>
-    <title>Addresses</title>
+    <title>Address</title>
 </head>
 <body>
-<h1>Addresses</h1>
+<h1>Address</h1>
+<a href="/address/add">Add New Address</a> <br />
+
+<br />
 <table border="1">
-    <tr><th>Address ID</th><th>Street</th><th>Zip Code</th></tr>
+    <tr><th>Address</th><th>Zip</th></tr>
     <% for(var i=0; result.length > i; i++ ) { %>
     <tr>
-        <td><%= result[i].address_id%></td>
         <td><a href="/address/?address_id=<%= result[i].address_id %>"><%= result[i].street %></a></td>
         <td><%= result[i].zip_code %></td>
+        <td><form action="/address/delete/">
+                <input type="hidden" name="address_id" id="address_id" value="<%= result[i].address_id %>" />
+                <input type="submit" value="Delete"/>
+            </form>
     </tr>
     <% } %>
 </table>
 </body>
-
 </html>
